# fv3-jedi

./: CMakeLists.txt
CI/: CMakeLists.txt  clone.sh
cmake/: FindESMF.cmake
ewok/gfs/defaults/: filesUFS_c384.yaml  filesUFS_c48.yaml  filesUFS_c768.yaml  geometry_c12_z64.yaml  model_c24.yaml  model_ufs_c384.yaml  model_ufs_c48.yaml  model_ufs_c768.yaml
ewok/gfs/tasks/: forecastUFS.py  getAnalysisUFS.py  getBackgroundGFS.py  getFcInitUFS.py  saveForecastUFS.py  ufs-run.sh  ufs.py
ewok/templates/: observations.yaml
src/fv3jedi/: CMakeLists.txt
src/fv3jedi/Fields/: fv3jedi_field_mod.f90  fv3jedi_fields_mod.f90
src/fv3jedi/Geometry/: Geometry.cc  Geometry.h  Geometry.interface.h  GeometryParameters.h  fv3jedi_geom_interface_mod.F90  fv3jedi_geom_mod.f90  fv_init_control_mod.F90  fv_init_mod.f90
src/fv3jedi/Increment/: Increment.cc
src/fv3jedi/Model/ufs/: ModelUFS.cc  ModelUFS.h  fv3jedi_ufs_interface_mod.F90  fv3jedi_ufs_mod.F90
src/fv3jedi/State/: State.cc  State.h  State.interface.h  fv3jedi_state_interface_mod.F90
src/fv3jedi/VariableChange/VertRemap/: fv3jedi_vc_vertremap_mod.f90
src/mains/: CMakeLists.txt  fv3jediEnsGETKF.cc  ufsjediEnsForecast.cc
test/: CMakeLists.txt  fv3jedi_setup_ufs_rundir.py  prep-letkf.sh  setup-c48.sh
test/Data/fieldmetadata/: ufs.yaml
test/Data/fv3files/: akbk27.nc4  input_lam_cmaq.nml
test/testinput/: convertstate_gchp.yaml  convertstate_gfs_c2gaussian.yaml  ensemble_ufs_forecast.yaml  ensfc_ufs.yaml  forecast_c48_001.yaml  forecast_c48_002.yaml  forecast_geos.yaml  forecast_ufs.yaml  forecast_ufs_1.yaml  forecast_ufs_2.yaml  forecast_ufs_c48.yaml  forecast_ufs_c48_coldstart.yaml  forecast_ufs_c48_warmstart.yaml  letkf-inline-c48.yaml  letkf-inline-part2.yaml  letkf-inline.yaml  letkf.yaml  letkf_forecast_ufs_1.yaml  letkf_forecast_ufs_2.yaml  model_ufs.yaml  model_ufs_c48.yaml  model_ufs_c48_coldstart.yaml  model_ufs_c48_warmstart.yaml  staticb_var_gfs.yaml
test/testoutput/: letkf.ref
